<resources>
    <string name="app_name">Aikyam</string>
    <string name="app_info_title">About Us</string>
    <string name="app_info">We, at Aikyam, believe in uplifting the needy.  We are a team of young and driven individuals, with only one aim: to help those who need it the most. We facilitate the transfer of resources like clothes and books and many more from those who have it in excess to those who need it the most. </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_login">Login/SignUp</string>
    <string name="action_admin">Admin</string>
    <string name="date">Select Date</string>
    <string name="title_activity_intent">IntentActivity</string>
    <string name="title_activity_login">Login</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>


    <string name="title_activity_home">Home</string>
    <string name="register_title">Register</string>

    <string name="login_title">Login</string>

    <string name="name">Name</string>

    <string name="email">Email</string>

    <string name="pwd">Password</string>
    <string name="tag">When in doubt, help out.</string>
    <string name="btnRegister">Register</string>
    <string name="title_activity_signup">Register</string>
    <string name="title_activity_admin__home">Admin_Home</string>
    <string name="title_activity_create__event">Create_Event</string>
    <string name="title_activity_donor__home">Home</string>
    <string name="title_activity_donate">Donate</string>
    <string name="title_activity_get_all_events">Events</string>
    <string name="title_activity_get_past_events">Successful Events</string>
    <string name="title_activity_get_upcoming_events">Upcoming Events</string>
    <string name="title_activity_modify_event">Modify Event</string>
    <string name="title_activity_mofify_event_info">Event Info</string>
    <string name="title_activity_modify_category">Modify Category</string>
    <string name="title_activity_contact_us">Contact Us</string>
</resources>
